<resources>

    <string name="title_add_match_prediction">Add match prediction</string>
    <string name="title_edit_match_prediction">Edit match prediction</string>

    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_predict">Predict</string>

    <string name="hint_home_team">Home team</string>
    <string name="hint_away_team">Away team</string>
    <string name="hint_points">Points</string>

    <string name="check_box_rugby_world_cup">Rugby World Cup</string>
    <string name="check_box_no_home_advantage">No home advantage (neutral venue)</string>

    <string name="chip_prediction" translatable="false">%1$s %2$d - %3$d %4$s</string>

    <string name="tooltip_add_match_prediction">Add match prediction</string>

    <string name="content_description_close">Close</string>

    <string name="menu_item_team" translatable="false">%1$s %2$s</string>

</resources>
